# sql_create_parser

./: Cargo.toml  Readme.md  docs.md  makefile
queries/: example.sql
sql/: example.sql
src/: grammar.pest  lib.rs  main.rs
tests/: tests.rs
