[package]
name = "sql_create_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Victoria Prymochenko"]
description = "A simple SQL CREATE parser for SQL CREATE TABLE queries."
readme = "Readme.md"
repository = "https://github.com/prymochenkovictoria/sql_create_parser"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
anyhow = "1.0.93"
thiserror = "2.0.0"